--- a/WillsFilterTool/Main.storyboard
+++ b/WillsFilterTool/Main.storyboard
@@ -1082,7 +1082,7 @@
                                     <action selector="addFilter:" destination="dDm-tJ-e98" id="s8d-dr-G0S"/>
                                 </connections>
                             </barButtonItem>
-                            <barButtonItem title="showImageController" landscapeImage="photo.artframe" catalog="system" id="xwJ-3p-zRb">
+                            <barButtonItem image="photo" catalog="system" landscapeImage="photo.artframe" id="xwJ-3p-zRb">
                                 <connections>
                                     <action selector="showImageControllerAction:" destination="dDm-tJ-e98" id="00Q-00-Ebb"/>
                                 </connections>
@@ -1185,6 +1185,7 @@
         <image name="chevron.up" catalog="system" width="128" height="72"/>
         <image name="ellipsis.circle" catalog="system" width="128" height="121"/>
         <image name="minus.circle.fill" catalog="system" width="128" height="121"/>
+        <image name="photo" catalog="system" width="128" height="93"/>
         <image name="photo.artframe" catalog="system" width="128" height="93"/>
         <image name="plus.circle.fill" catalog="system" width="128" height="121"/>
         <image name="questionmark.square.dashed" catalog="system" width="128" height="114"/>
